--- a/index.ipynb
+++ b/index.ipynb
@@ -888,21 +888,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    for neighbor in neighbors:\n",
-    "\n",
-    "        distance_between_neighbors(selected_individual, neighbor)\n",
-    "    return neighbors"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +923,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
