Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -984,7 +984,7 @@
     "'pickup_longitude': -73.78115,\n",
     "'trip_distance': 18.38}\n",
     "\n",
-    "nearest_three_neighbors = nearest_neighbors(new_trip, cleaned_trips or [], number = 3)\n",
+    "nearest_three_neighbors = nearest_neighbors(new_trip, cleaned_trips, number = 3)\n",
     "nearest_three_neighbors\n",
     "# [{'distance_from_selected': 0.0004569288784918792,\n",
     "#   'pickup_latitude': 40.64483,\n",
