--- a/index.ipynb
+++ b/index.ipynb
@@ -949,7 +949,7 @@
     "    number = number or len(trips)\n",
     "    neighbor_distances = distance_all(selected_trip, trips)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance_from_selected'])\n",
-    "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    sorted_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return sorted_neighbors[:number]"
    ]
   },
